Updated package.json and new data not for npm

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gtfs2mongo",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Pushes provided GTFS text/csv files into a collection of a specified MongoDB database.",
   "main": "gtfs2mongo.js",
   "scripts": {
@@ -31,5 +31,6 @@
   "dependencies": {
     "mongodb": "^1.4.4",
     "csv-parse": "0.0.3"
-  }
+  },
+  "devDependencies": {}
 }
